<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="sample1" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYY-Dh-LHH">
                                <accessibility key="accessibilityConfiguration" identifier="lhsTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="kJP-AJ-AlG"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NxD-Ci-GaW">
                                <accessibility key="accessibilityConfiguration" identifier="rhsTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="wqM-i4-lTD"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Cd-Ya-tRt">
                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="calculateButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="C1W-WC-DrG"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="計算"/>
                                <connections>
                                    <action selector="calculateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BX9-eA-8iu"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdE-CH-f21">
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="g2q-dC-pL5"/>
                                    <constraint firstAttribute="height" constant="30" id="vAK-P2-byA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="0Cd-Ya-tRt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8LS-kt-8u8"/>
                            <constraint firstItem="NxD-Ci-GaW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IEF-03-Y0N"/>
                            <constraint firstItem="mYY-Dh-LHH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="P94-rV-glx"/>
                            <constraint firstItem="mdE-CH-f21" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VWz-Dv-fsv"/>
                            <constraint firstItem="mdE-CH-f21" firstAttribute="top" secondItem="0Cd-Ya-tRt" secondAttribute="bottom" constant="25" id="f5J-5t-0FL"/>
                            <constraint firstItem="NxD-Ci-GaW" firstAttribute="top" secondItem="mYY-Dh-LHH" secondAttribute="bottom" constant="25" id="loh-9I-Zzn"/>
                            <constraint firstItem="mYY-Dh-LHH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="reW-XI-oma"/>
                            <constraint firstItem="0Cd-Ya-tRt" firstAttribute="top" secondItem="NxD-Ci-GaW" secondAttribute="bottom" constant="25" id="xTu-Qg-c7Y"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="lhsTextField" destination="mYY-Dh-LHH" id="b6B-S8-tA6"/>
                        <outlet property="resultLabel" destination="mdE-CH-f21" id="h12-fQ-Ooo"/>
                        <outlet property="rhsTextField" destination="NxD-Ci-GaW" id="mqE-HN-mXs"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="119.1904047976012"/>
        </scene>
    </scenes>
</document>
